syntax = "proto3";

package spot.v1;

option go_package = "zhadan.spot.v1;spotv1";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

enum UserRole {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_ADMIN = 2;
  ROLE_VIEWER = 3;
}

service SpotInstrumentService {
  rpc ViewMarkets (ViewMarketsRequest) returns (ViewMarketsResponse);
}

message Market {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  bool enabled = 3;
  google.protobuf.Timestamp deleted_at = 4;
}

message ViewMarketsRequest{
  repeated UserRole user_roles = 1 [
    (buf.validate.field).repeated = {
      min_items: 1,
      unique: true,
      items: {
        enum: { defined_only: true, not_in: 0 }
      }
    }
    ]; // Roles for filtering markets
}

message ViewMarketsResponse {
  repeated Market markets = 1; // Market object
}
